--- a/src/styles/partials/common/_paragraph.scss
+++ b/src/styles/partials/common/_paragraph.scss
@@ -1,7 +1,6 @@
 @use "../../sass-mq/mq" as *;
 @use "../../modules/typography" as *;
 
-p,
 .text__body {
   margin-top: 0;
   margin-bottom: 2vw;
